--- a/1.org
+++ b/1.org
@@ -26,7 +26,7 @@ $$ Z = (X1 + \neg Y1) + (\neg X2 + Y2) $$
 Начальный адрес памяти: 0209H
 
 
-#+ATTR_LATEX: :align 
+#+ATTR_LATEX: :align |p{3cm}|p{3cm}|p{3cm}|
 |---+---------------------+--------------------------+----------------------|
 |   | Адрес ячейки памяти | Содержимое ячейки памяти | Комментарий          |
 |---+---------------------+--------------------------+----------------------|
@@ -39,7 +39,7 @@ $$ Z = (X1 + \neg Y1) + (\neg X2 + Y2) $$
 |---+---------------------+--------------------------+----------------------|
 |   | 020CH               | 0055H                    | Y2                   |
 |---+---------------------+--------------------------+----------------------|
-|   | 020DH               | 003DH                    | Результат            |
+|   | 020DH               | 0043H                    | Результат            |
 |   |                     |                          | выполнения программы |
 |---+---------------------+--------------------------+----------------------|
 
@@ -64,13 +64,59 @@ $$ Z = (X1 + \neg Y1) + (\neg X2 + Y2) $$
 
 В эмуляторе:
 
+#+ATTR_LATEX: :width 5cm
 #+CAPTION: Ввод программы в эмулятор
 [[file:images/2023-04-11_12-30-04_screenshot.png]]
 
 
-
+#+ATTR_LATEX: :width 5cm
 #+CAPTION: Ввод данных
 [[file:images/2023-04-11_12-30-46_screenshot.png]]
 
 #+CAPTION: Результат выполнения
 [[file:images/2023-04-11_12-31-25_screenshot.png]]
+
+#+CAPTION: Пошаговое выполнение
+[[file:images/2023-04-23_13-06-38_screenshot.png]]
+
+** Определение времени, затраченного на выполнение программы
+
+Количество тактов для каждой команды:
+
+\begin{center}
+\begin{tabular}{|c|c|c|}
+\hline
+Команда & Такты & Всего тактов \\
+\hline
+LXI H,0209 & 10 & 10 \\
+MOV A,M & 7 & 7 \\
+CMA & 4 & 4 \\
+INX H & 6 & 6 \\
+ADD M & 7 & 7 \\
+MOV D,A & 5 & 5 \\
+INX H & 6 & 6 \\
+MOV A,M & 7 & 7 \\
+CMA & 4 & 4 \\
+INX H & 6 & 6 \\
+ADD M & 7 & 7 \\
+ADD D & 4 & 4 \\
+INX H & 6 & 6 \\
+MOV M,A & 7 & 7 \\
+RST 07 & 11 & 11 \\
+\hline
+ & & 84 \\
+\hline
+\end{tabular}
+\end{center}
+
+Время выполнения программы можно вычислить по формуле:
+
+$$T_{вып} = Такты \cdot Тген$$
+
+$Такты$ - общее количество тактов, затраченных на выполнение программы, $Тген$ - время одного такта.
+
+Учитывая, что тактовая частота $f_{ген}$ = 5МГц, а время одного такта $Тген$ = 1/$f_{ген}$ = 0,2 мкс, получаем:
+
+$$T_{вып} = 84 \cdot 0,2 \ мкс = 16,8 \ мкс$$
+
+Таким образом, время выполнения данной программы составляет 16,8 мкс.
